src/objects/Accreditation_Level_Rule__c.object
<CustomObject>
    <description>PRM rele 4 Accreditation automation rules</description>
    <fields>
        <fullName>Accreditation_Level__c</fullName>
        <label>Accreditation Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Alliance Partner</fullName>
                </value>
                <value>
                    <fullName>Authorized</fullName>
                </value>
                <value>
                    <fullName>Authorized - Accreditation In Progress</fullName>
                </value>
                <value>
                    <fullName>Base</fullName>
                </value>
                <value>
                    <fullName>Base - Certification In Progress</fullName>
                </value>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Certified</fullName>
                </value>
                <value>
                    <fullName>Co-Branded</fullName>
                </value>
                <value>
                    <fullName>Contract Expired</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Expert</fullName>
                </value>
                <value>
                    <fullName>Interim</fullName>
                </value>
                <value>
                    <fullName>Master</fullName>
                </value>
                <value>
                    <fullName>No Accreditation</fullName>
                </value>
                <value>
                    <fullName>Nokia Brand of Service</fullName>
                </value>
                <value>
                    <fullName>Partner Branded</fullName>
                </value>
                <value>
                    <fullName>Premier</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accreditation_Type__c</fullName>
        <label>Accreditation Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Administration_Software_Only__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Administration Software Only</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Plan_Status__c</fullName>
        <label>Business Plan Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NIRA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>PPA-DIS</fullName>
                </value>
                <value>
                    <fullName>PPA-RES</fullName>
                </value>
                <value>
                    <fullName>PMA-NBOS</fullName>
                </value>
                <value>
                    <fullName>PMA-NBOS (Non-PPA Services Partner)</fullName>
                </value>
                <value>
                    <fullName>PMA-Co-Branded</fullName>
                </value>
                <value>
                    <fullName>Federal Government Agreement</fullName>
                </value>
                <value>
                    <fullName>Services Partner Agreement</fullName>
                </value>
                <value>
                    <fullName>Reseller - (FALU)</fullName>
                </value>
                <value>
                    <fullName>Reseller - (FNOK)</fullName>
                </value>
                <value>
                    <fullName>US Distributor - Legacy</fullName>
                </value>
                <value>
                    <fullName>DMA-Co-Branded</fullName>
                </value>
                <value>
                    <fullName>DMA-Co-Branded (non PPA Distributor)</fullName>
                </value>
                <value>
                    <fullName>DMA-NBOS</fullName>
                </value>
                <value>
                    <fullName>DMA-NBOS (Non PPA Distributor)</fullName>
                </value>
                <value>
                    <fullName>Letter of Resale Authorization</fullName>
                </value>
                <value>
                    <fullName>Managed Services Amendment to SSA/MSA</fullName>
                </value>
                <value>
                    <fullName>NDA</fullName>
                </value>
                <value>
                    <fullName>PMA-Co-Branded (Non PPA Services Partner)</fullName>
                </value>
                <value>
                    <fullName>CPA-RES</fullName>
                </value>
                <value>
                    <fullName>CPA-DIS</fullName>
                </value>
                <value>
                    <fullName>CPA-DIS family</fullName>
                    <isActive>false</isActive>
                    <label>CPA-DIS family</label>
                </value>
                <value>
                    <fullName>CPA-RES family</fullName>
                    <isActive>false</isActive>
                    <label>CPA-RES family</label>
                </value>
                <value>
                    <fullName>PPA-DIS family</fullName>
                    <isActive>false</isActive>
                    <label>PPA-DIS family</label>
                </value>
                <value>
                    <fullName>PPA-RES family</fullName>
                    <isActive>false</isActive>
                    <label>PPA-RES family</label>
                </value>
                <value>
                    <fullName>Reseller Agreements</fullName>
                    <isActive>false</isActive>
                    <label>Reseller Agreements</label>
                </value>
                <value>
                    <fullName>SPaaP- Managed Services</fullName>
                    <isActive>false</isActive>
                    <label>SPaaP- Managed Services</label>
                </value>
                <value>
                    <fullName>SPaaP-Hybrid</fullName>
                    <isActive>false</isActive>
                    <label>SPaaP-Hybrid</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_Technician__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Field Technician</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Geo_Level_1_Name__c</fullName>
        <label>Geo Level 1 Name</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Region North America</fullName>
                </value>
                <value>
                    <fullName>Region Greater China</fullName>
                </value>
                <value>
                    <fullName>Region Europe</fullName>
                </value>
                <value>
                    <fullName>Region Asia-Pacific</fullName>
                </value>
                <value>
                    <fullName>Region Middle East &amp; Africa</fullName>
                </value>
                <value>
                    <fullName>Region Latin America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lab_Equipment_Requirements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lab Equipment Requirements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level_Rank__c</fullName>
        <label>Level Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Market Latin America</fullName>
                </value>
                <value>
                    <fullName>Market Middle East and Africa</fullName>
                </value>
                <value>
                    <fullName>Market India</fullName>
                </value>
                <value>
                    <fullName>Market Greater China</fullName>
                </value>
                <value>
                    <fullName>Market Europe</fullName>
                </value>
                <value>
                    <fullName>Market North America</fullName>
                </value>
                <value>
                    <fullName>Market Asia Pacific &amp; Japan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Network_Integration_Engineer__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Network Integration Engineer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Network_Planning_Engineer__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Network Planning Engineer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Certification_Optional__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No Certification (Optional)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Marketing_Manager__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Partner Marketing Manager</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Program__c</fullName>
        <label>Partner Program</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NokiaCPQ_Partner_Program</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Relationship_Manager__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Partner Relationship Manager</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Indirect Reseller</fullName>
                </value>
                <value>
                    <fullName>Value Added Reseller</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <label>Portfolio</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Portfolio_New</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Associate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sales Associate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Engineer__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sales Engineer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Desk_Clerk__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Service Desk Clerk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shift_Model__c</fullName>
        <label>Shift Model</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>8X5</fullName>
                </value>
                <value>
                    <fullName>16X5</fullName>
                </value>
                <value>
                    <fullName>24X7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technical_Support_Level_1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Technical Support Level 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Technical_Support_Level_2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Technical Support Level 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Third_Party_Screening__c</fullName>
        <label>Third Party Screening</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Conditionally Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Accreditation Level Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Partner_Type__c</columns>
        <columns>Portfolio__c</columns>
        <columns>Accreditation_Type__c</columns>
        <columns>Accreditation_Level__c</columns>
        <columns>Market__c</columns>
        <columns>Partner_Program__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AR - {00000}</displayFormat>
        <label>Accreditation Level Rules Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accreditation Level Rule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>